name: lumberhack-bench
version: 0
build-type: Simple
cabal-version: >= 1.6

executable mapmap
  main-is: mapmap.hs
  extensions: ExtendedDefaultRules Strict
  ghc-options: -fno-enable-rewrite-rules -v
  build-depends:
    base == 4.*,
    criterion

executable mapmapHsFusion
  main-is: mapmap.hs
  extensions: ExtendedDefaultRules Strict
  ghc-options: -v -O3
  build-depends:
    base == 4.*,
    criterion


executable mapmap2
  main-is: mapmap2.hs
  extensions: ExtendedDefaultRules
  ghc-options: -O2
  build-depends:
    base == 4.*,
    criterion


executable mapmap2HsFusion
  main-is: mapmap2.hs
  extensions: ExtendedDefaultRules
  ghc-options: -O2 -fno-enable-rewrite-rules
  build-depends:
    base == 4.*,
    criterion


executable testQueen
  main-is: queen.hs
  extensions: ExtendedDefaultRules
  ghc-options: -O2
  build-depends:
    base == 4.*,
    criterion

executable testEnumFromTo
  main-is: enumFromTo.hs
  extensions: ExtendedDefaultRules
  ghc-options: -O2
  build-depends:
    base == 4.*,
    criterion