name: lumberhack-bench-SimpleRecursiveTypeExample
version: 0
build-type: Simple
cabal-version: >= 1.6

executable SimpleRecursiveTypeExample
  main-is: SimpleRecursiveTypeExample.hs
  extensions: ExtendedDefaultRules
  ghc-options: -fno-strictness -O2
  build-depends:
    base == 4.*,
    criterion
    