name: lumberhack-bench-SimpleRecursiveTypeExample_lh
version: 0
build-type: Simple
cabal-version: >= 1.6

executable SimpleRecursiveTypeExample_lh
  main-is: SimpleRecursiveTypeExample_lh.hs
  extensions: ExtendedDefaultRules
  ghc-options: -fno-strictness -O2
  build-depends:
    base == 4.*,
    criterion
    